# tsproj_stat

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  forecasting.py  pipeline.py  testing.py  training.py
config/: __init__.py  default.py  default.yaml
data_provider/: __init__.py  data_gene.py  data_loader.py  data_processor.py
eda/: __init__.py  analyzer.py  data_gen.py  diagnostics.py  pipeline.py  report.py
evaluation/: backtest.py
examples/: run_backtest.py
features/: FeatureEngineering.py  FeatureScalering.py
inference/: predict.py
models/: __init__.py  base.py  factory.py  io.py  persistence.py  selection.py  statistical.py
models/arima_models/: arima_model.py
src/ts_forecast_framework/: __init__.py
src/ts_forecast_framework/evaluation/: backtest.py  metrics.py
src/ts_forecast_framework/inference/: predict.py
src/ts_forecast_framework/models/: base.py  selection.py  statistical.py
task/: __init__.py  forecasting.py  testing.py  training.py
tests/: test_arima_auto_order.py  test_arima_smoke.py  test_backtest_smoke.py  test_bayesian_tmt_rar.py  test_cli_overrides.py  test_data_gen.py  test_data_processor.py  test_eda_smoke.py  test_factory.py  test_factory_params.py  test_metrics.py  test_persistence.py  test_pipeline.py
ts_eda/: data_analysis.py
