[project]
name = "ts-forecast-framework"
version = "0.1.0"
description = "Statistical time series forecasting testing & inference framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
