[project]
name = "ts-forecast-framework"
version = "0.2.0"
description = "Statistical time series forecasting framework with layered pipeline and CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.8",
    "scikit-learn>=1.1",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pmdarima>=2.0",
    "arch>=7.0",
    "tbats>=1.1",
    "prophet>=1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]